js/src/tests/test262/built-ins/Error/prototype/name/15.11.4.2-1.js
for
(
var
i
in
Error
.
prototype
)
{
assert
.
notSameValue
(
i
"
name
"
'
i
'
)
;
}
reportCompare
(
0
0
)
;
